# tcp-chat

./: CMakeLists.txt
client/: CMakeLists.txt  test_cmake.txt
client/headers/: chatWindow.h  logger.h  networkManager.h  networkThread.h  serverAddressWindow.h  usernameWindow.h  windowManager.h
client/src/: chatWindow.Cpp  logger.cpp  main.cpp  networkManager.cpp  networkThread.cpp  serverAddressWindow.cpp  usernameWindow.cpp  windowManager.cpp
client/styles/: styles.qss
client/tests/: test_chatwindow.cpp  test_serveraddresswindow.cpp  test_usernamewindow.cpp
headers/: logger.h  room.h  server.h  user.h
server/: CMakeLists.txt
server/headers/: room.h  server.h  user.h
server/src/: logger.cpp  main.cpp  room.cpp  server.cpp  user.cpp
server_tests/: CMakeLists.txt  server_tests.cpp
src/: main.cpp  room.cpp  server.cpp  user.cpp
src/logger/: logger.cpp
tests/: CMakeLists.txt  chat_test.cpp  chat_tests.cpp
